# Hopkins

./: README.md
Cmake/: Opencv_RCL_Head_All.txt
Cmake/HSV检测瓶盖/src/: rs-imshow.cpp
Cmake/Opencv-pointclould_Test_GetBored（读取PLY并且读取点云轮廓）/: CMakeLists.txt
Cmake/Opencv-pointclould_Test_GetBored（读取PLY并且读取点云轮廓）/src/: main.cpp
Cmake/Opencv_PCL_Transform_dpth2PCD/src/: PCL_test_weigenggai  PCL_trans.cpp  pcl_test
Cmake/Opencv_Pcl_Test(创建并展示pcl)/: CMakeCache.txt  Makefile  cmake_install.cmake  pcl_test
Cmake/Opencv_Pcl_TestRead/src/: pcl_test.cpp
Cmake/Opencv_Pcl_Test_Read/src/: pcl_test.cpp
Cmake/Opencv_Speed_Test(F)/: CMakeLists.txt  main.c
Cmake/Opencv_Speed_Test(F)/src/: CMakeLists.txt
Cmake/Opencv_rs-pointclould_Test_Read(有example跑通)/: CMakeLists_recc.txt
Cmake/Opencv_rs-pointclould_Test_Read(有example跑通)/src/: example.hpp  pcl_test.cpp
Cmake/opencvtst (copy)/: CMakeLists.txt
Cmake/opencvtst (copy)/src/: demo.cpp
Cmake/opencvtst(Depth+RGB)/src/: demo.cpp
Cmake/tstForCmake/: main.c
Cmake/video_depth2pointXYZ (Stream) (Success)/src/: rs-imshow.cpp
Cmake/video_depth2pointXYZ (Stream) (copy)/src/: PCL_opencv_head.h  rs-imshow.cpp
Cmake/video_depth2pointXYZ/src/: rs-imshow.cpp
Cmake/双摄像头对齐tst1/src/: rs-imshow.cpp
Cmake/打开普通RGB摄像头、深度摄像头对齐测距/src/: rs-imshow.cpp
Cmake/摄像头编号确定（缺少windowws.h）/src/: rs-imshow.cpp
Cmake/测试双摄像头同时开启/src/: 11  rs-imshow.cpp
Cmake/简单滤波/src/: rs-imshow.cpp
VSstdio/: 二维码标定（无canny）.cpp  二维码检测.cpp  二维码跟踪.cpp  使用边距固定的检测二维码方法..cpp  测试cuda加速.cpp  测试访问Mat速度.cpp  相机标定.cpp  简化的识别高尔夫球.cpp  边缘检测.cpp  验证Mat中颜色通道为BGR.cpp
(+5 files in other folders)
