PROJECT (OpencvSpeedTest)
SET(SRC_LIST main.c)
MESSAGE(STATUS "This is BINARY dir " ${HELLO_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir "${HELLO_SOURCE_DIR})
ADD_SUBDIRECTORY(src bin)
ADD_EXECUTABLE(OpencvSpeedTest ${SRC_LIST})
find_package(opencv 4.2 REQUIRED)
find_package(realsense2 REQUIRED)
find_package(PCL 1.8.1 REQUIRED)